--- a/_pages/city-guides/hamburg/index.html
+++ b/_pages/city-guides/hamburg/index.html
@@ -29,14 +29,14 @@ features:
 
   - id: das-alte-madchen
     time: "12:00"
-    place: Das alte Mädchen
+    place: Das alte Mädchen & die Strandperle
     title: Die Szene
     description: >
       Sollte sich Ihnen Hamburg ausnahmsweise mal von seiner sonnigen Seite präsentieren, lohnt sich ein kurzer Ausflug an den feinsandigen Elbstrand. In der Strandperle in Övelgönne ist ganz Hamburg zu Gast und lässt sich authentische Matjesbrötchen beim Blick auf die vorüberziehenden Schiffe schmecken. Oder Sie statten der angesagten Hamburger Sternschanze einen Besuch ab. Im Braugasthaus Altes Mädchen gibt es nicht nur leckere Biere zur Verkostung, sondern auch frische und vielfältige Köstlichkeiten von gegrilltem Fisch bis zum saftigen Schnitzel. Gleich nebenan bietet die Ratsherren Brauerei interessante Führungen und Einblicke in 1000 Jahre Hamburger Biergeschichte an – inklusive Verkostung, natürlich!
 
   - id: kunst-in-den-deichtorhallen-oder-im-gangeviertel
     time: "14:00"
-    place: Kunst in den Deichtorhallen oder im Gängeviertel
+    place: Kunstvoll
     title: Deichtorhallen oder Gängeviertel
     description: >
       Zeit für Kunst: Kulturell geht es entweder weiter mit einem Besuch der berühmten Deichtorhallen, die sich der zeitgenössischen Kunst und Fotografie widmen. An zwei Standorten finden Sie mit 10.000 qm die größten Ausstellungsflächen dieser Art in Europa. Die Halle für aktuelle Kunst widmet sich in wechselnden Großprojekten großen Namen und aufstrebenden Nachwuchskünstlern. Das Haus der Photographie zeigt internationale Wechselausstellungen zur Fotografie. Gleich in der Nähe der Passagen im Shoppingviertel um den Gänsemarkt fordert ein weiterer Schwerpunkt der Hamburger Kreativszene auf: Komm in die Gänge. Das Gängeviertel ist historischer Teil der Innenstadt und Kunst- und Stadtentwicklungsprojekt in einem.
