--- a/_pages/city-guides/hamburg/index.html
+++ b/_pages/city-guides/hamburg/index.html
@@ -43,7 +43,7 @@ features:
 
   - id: anregender-input-im-museum-fur-kunst-und-gewerbe
     time: "17:00"
-    place: Anregender Input im Museum für Kunst und Gewerbe
+    place: "Anregender Input im Museum für <br class=\"desktop-break\">Kunst und Gewerbe"
     title: Anregender Input
     description: >
       Seit 1877 ist dies ein Ort für die großen Geschichten menschlicher Kreativität: Aktuelle Themen und Kulturhistorik werden im Museum für Kunst und Gewerbe zu hochkarätigen Sammlungen kombiniert, die zum Nachdenken anregen. Höhepunkte sind unter anderem die berühmten Jugendstilräume, einzigartige expressionistische Tanzmasken und die orange-rote Kantine des dänischen Designers Verner Panton. Führungen, ein Restaurant, eine Buchhandlung und eine Bibliothek sowie, ganz aktuell, die Möglichkeit an einer japanischen Teezeremonie teilzunehmen, stehen dem Besucher zur Verfügung.
@@ -57,7 +57,7 @@ features:
 
   - id: du-musst-mal-wieder-wieder-nach-st-pauli-geh-n
     time: "22:00"
-    place: Du musst mal wieder, wieder nach St. Pauli geh'n
+    place: "Du musst mal wieder, wieder nach <br class=\"desktop-break\">St. Pauli geh'n"
     title: Verzaubern lassen
     description: >
       Wir bleiben in St. Pauli, denn jetzt zieht es uns in die clockers Bar: Von außen eher unscheinbar, ist man nach einem Besuch nachhaltig beeindruckt – und das liegt nicht nur an den Spirituosen aus eigener Herstellung. Auch das Ambiente wird Sie begeistern. Probieren Sie unbedingt den leckeren Gin und lassen Sie sich von der warmen Atmosphäre mitten im Kiez verzaubern, bevor Sie dann weiter in das Nachtleben um die Reeperbahn eintauchen. Wir wünschen viel Spaß beim Treiben lassen und sagen “Moin!”.
