--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,8 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: Den neuen Lexus UX erleben
-intro: Entdecken Sie den Lexus UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Design begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt 24 Stunden lang probefahren und den Stil des Luxus von heute mit einem Lexus UX entdecken.
+title: Den neuen Lexus&nbsp;UX erleben
+intro: Entdecken Sie den Lexus&nbsp;UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Design begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt 24 Stunden lang probefahren und den Stil des Luxus von heute mit einem Lexus&nbsp;UX entdecken.
 
 intro-links:
 
@@ -15,11 +15,11 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Konfigurieren Sie Ihren UX
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+  - title: Konfigurieren Sie Ihren Lexus&nbsp;UX
+    link: https://carconfig.lexus.de/de/de/?UX/de6de334-f17f-49c6-b814-526e3c7b8147/grades&models
 
   - title: Mehr entdecken
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.de/car-models/ux/#hero
 
 feature-cta: Mehr entdecken
 
@@ -28,42 +28,42 @@ features:
   - id: self-charge
     title: Kein Aufladen. Kein Diesel. Keine Kompromisse.
     description: >
-      Der Lexus UX lädt sich während der Fahrt selbstständig auf. Es müssen keine externen Ladestationen angefahren werden, es gibt keine Unterbrechungen auf Ihrer Reise. Ihre Fahrt wird mit der 4. Generation des Lexus-Hybridantriebs aus selbstladend hocheffizientem Elektromotor mit neu entwickelter Hybridschaltung und 4-Zylinder-Benzinmotor mit 2 Litern Hubraum auf sportlichen 178 PS zum Erlebnis.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+      Der Lexus&nbsp;UX lädt sich während der Fahrt selbstständig auf. Es müssen keine externen Ladestationen angefahren werden, es gibt keine Unterbrechungen auf Ihrer Reise. Ihre Fahrt wird mit der 4. Generation des Lexus-Hybridantriebs aus selbstladend hocheffizientem Elektromotor mit neu entwickelter Hybridschaltung und 4-Zylinder-Benzinmotor mit 2 Litern Hubraum auf sportlichen 178 PS zum Erlebnis.
+    link: https://www.lexus.de/car-models/ux/#hero
 
   - id: performance
     title: Leistung auf neuem Level
     description: >
-      Sportlich-konturierte Sitze mit In-Control-Position für den Fahrer und ein niedriger Schwerpunkt mit stabilem Fahrwerk für agiles Fahrverhalten bei hoher Laufruhe sorgen für Coupé-Feeling an Bord dieses kompakten SUV, ideal für den Stadtverkehr. Der neue Lexus UX verbindet das aufregend unaufgeregte Gefühl von elektronischem Allrad-Antrieb mit dem Erlebnis der Effizienz der nächsten Automobilgeneration. Und mit einem Mindestverbrauch von 4.1 L/km bleibt mehr für das gewissen Extra an Luxus auf dem nächsten Städtetrip.
-    link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
+      Sportlich-konturierte Sitze mit In-Control-Position für den Fahrer und ein niedriger Schwerpunkt mit stabilem Fahrwerk für agiles Fahrverhalten bei hoher Laufruhe sorgen für Coupé-Feeling an Bord dieses kompakten SUV, ideal für den Stadtverkehr. Der neue Lexus&nbsp;UX verbindet das aufregend unaufgeregte Gefühl von elektronischem Allrad-Antrieb mit dem Erlebnis der Effizienz der nächsten Automobilgeneration. Und mit einem Mindestverbrauch von 4.1 L/km bleibt mehr für das gewissen Extra an Luxus auf dem nächsten Städtetrip.
+    link: https://www.lexus.de/car-models/ux/#hero
 
   - id: design
     title: Intelligentes Design
     description: >
-      Dramatisch elegant und mit viel Persönlichkeit: der Lexus UX ist durch seine sportliche Silhoutte, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit dieser innovativ gestaltete Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+      Dramatisch elegant und mit viel Persönlichkeit: der Lexus&nbsp;UX ist durch seine sportliche Silhoutte, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit dieser innovativ gestaltete Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
+    link: https://www.lexus.de/car-models/ux/#hero
 
   - id: city
     title: Perfekt für die Stadt
     description: >
-      Der Lexus UX verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert durch das japanisches Architekturprinzip Engawa, womit Innen und Außen nahtlos miteinander verbunden werden. Das clevere Design ermöglicht es, die Größe des Fahrzeugs intuitiv aus der Fahrerposition zu erfassen und garantiert leichte Manövrierbarkeit in der Stadt.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+      Der Lexus&nbsp;UX verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert durch das japanisches Architekturprinzip Engawa, womit Innen und Außen nahtlos miteinander verbunden werden. Das clevere Design ermöglicht es, die Größe des Fahrzeugs intuitiv aus der Fahrerposition zu erfassen und garantiert leichte Manövrierbarkeit in der Stadt.
+    link: https://www.lexus.de/car-models/ux/#hero
 
   - id: technology
     title: Innovation mit Imagination
     description: >
       Ein Panoramablick-Monitor erzeugt mit vier Videokameras einen 360-Grad-Blick um das Auto und auf die Umgebung. Mit dem integrierten Qi-kompatiblen, kabellosen Ladegerät stören keine Kabel mehr: Das Aufladen von Smartphones ist einfach über das Ladegerät möglich. So sind Sie für alle Arten von urbanen Erkundungen bereit.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.de/car-models/ux/#hero
 
   - id: saftey
     title: Fortschritt mit Umsicht und Sicherheit
     description: >
       Ein fortschrittliches Lexus Safety System+ der 2. Generation schützt Sie und Ihre Mitfahrer mit Funktionen wie dem Dynamic-Radar, Cruise-Control mit Straßenschild-Assistent, Pre-Collision-System und Spurhalteassistent. Durch die Ergänzung und Stärkung Ihrer fahrerischen Fähigkeiten verbessert das Lexus Safety System+ Ihre Sinne, sodass Sie sich auf allen bevorstehenden Reise immer sicher fühlen.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    link: https://www.lexus.de/car-models/ux/#hero
 
   - id: config
     title: Konfigurieren
     description: >
       Gestalten Sie Ihre Lexus-Erfahrung mit vielfältigen Optionen – auch der dynamische F&nbsp;SPORT ist dabei. Stellen Sie Ihr Traumauto jetzt online selbst zusammen.
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+    link: https://carconfig.lexus.de/de/de/?UX/de6de334-f17f-49c6-b814-526e3c7b8147/grades&models
 ---
