--- a/_pages/angebote/index.html
+++ b/_pages/angebote/index.html
@@ -5,5 +5,5 @@ nav: true
 nav-order: 5
 
 title: Angebote
-intro: Entdecken Sie unsere handverlesene Auswahl beliebter Design-Hotels in Deutschland und weltweit. Wer jetzt sein Lieblingshotel in Deutschland bucht, hat gleichzeitig die Gewinnchance auf den neuen Lexus UX mit selbstladendem Hybridantrieb für die Dauer des gesamten Trips.
+intro: Entdecken Sie unsere handverlesene Auswahl beliebter Design-Hotels in Deutschland und weltweit. Wer jetzt sein Lieblingshotel in Deutschland bucht, hat gleichzeitig die Gewinnchance auf den neuen Lexus&nbsp;UX mit selbstladendem Hybridantrieb für die Dauer des gesamten Trips.
 ---
