--- a/_pages/hoteles/index.html
+++ b/_pages/hoteles/index.html
@@ -5,5 +5,5 @@ nav: true
 nav-order: 5
 
 title: Hoteles
-intro: Descubre nuestros hoteles de diseño favoritos dentro y fuera de España y vive una escapada con estilo única. Reserva cualquier oferta en España y ten la oportunidad de probar el nuevo híbrido autorrecargable Lexus UX durante tus vacaciones.
+intro: Descubre nuestros hoteles de diseño favoritos dentro y fuera de España y vive una escapada con estilo única. Reserva cualquier oferta en España y ten la oportunidad de probar el nuevo híbrido autorrecargable Lexus&nbsp;UX durante tus vacaciones.
 ---
