--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,8 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: Lexus UX
-intro: Dirígete a tu próxima aventura urbana con el nuevo Lexus UX, un Híbrido Autorrecargable que incorpora un diseño innovador y una exquisita artesanía. Salta de ciudad en ciudad, descubriendo un mundo de diseño y artesanía en un vehículo hecho para escapadas urbanas. Descubre el estilo y el lujo del Lexus UX con una prueba de conducción de 24 horas.
+title: Lexus&nbsp;UX
+intro: Dirígete a tu próxima aventura urbana con el nuevo Lexus&nbsp;UX, un Híbrido Autorrecargable que incorpora un diseño innovador y una exquisita artesanía. Salta de ciudad en ciudad, descubriendo un mundo de diseño y artesanía en un vehículo hecho para escapadas urbanas. Descubre el estilo y el lujo del Lexus&nbsp;UX con una prueba de conducción de 24 horas.
 
 intro-links:
 
@@ -15,11 +15,11 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Diseña tu propio UX
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+  - title: Diseña tu propio Lexus&nbsp;UX
+    link: https://carconfig.lexus.no/no/no/?UX/7a7643d4-def8-478f-969f-66aac66ebd86/grades
 
   - title: Descubre más
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.no/car-models/ux/#hero
 
 feature-cta: Descubre más
 
@@ -27,36 +27,36 @@ features:
 
   - id: self-charge
     title: Sin enchufes. Sin diésel. Sin preocupaciones
-    description: El modelo Lexus UX se carga de forma automática mientras conduces. No tiene enchufes, lo cual significa que tu escapada no tendrá interrupciones. Los viajes estarán impulsados por una cuarta generación de Híbrido Autorrecargable Lexus con transmisión automática que cuenta con un motor de gasolina de 4 cilindros y 2 litros, un potente motor eléctrico y una transmisión híbrida de nuevo desarrollo.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    description: El modelo Lexus&nbsp;UX se carga de forma automática mientras conduces. No tiene enchufes, lo cual significa que tu escapada no tendrá interrupciones. Los viajes estarán impulsados por una cuarta generación de Híbrido Autorrecargable Lexus con transmisión automática que cuenta con un motor de gasolina de 4 cilindros y 2 litros, un potente motor eléctrico y una transmisión híbrida de nuevo desarrollo.
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: performance
     title: Rendimiento estimulante
-    description: "Una posición de asiento dominante con excelente visibilidad, junto con un centro de gravedad bajo y una plataforma rígida, brindan una experiencia de conducción que simplemente no se esperaría de un crossover moderno: ágil, potente y sensible. El nuevo Lexus UX yuxtapone el rendimiento de la tracción en las cuatro ruedas E-FOUR con una eficiencia de próxima generación, logrando hasta 68.9 mpg, ideal para ahorrar combustible durante una escapada de fin de semana."
-    link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
+    description: "Una posición de asiento dominante con excelente visibilidad, junto con un centro de gravedad bajo y una plataforma rígida, brindan una experiencia de conducción que simplemente no se esperaría de un crossover moderno: ágil, potente y sensible. El nuevo Lexus&nbsp;UX yuxtapone el rendimiento de la tracción en las cuatro ruedas E-FOUR con una eficiencia de próxima generación, logrando hasta 68.9 mpg, ideal para ahorrar combustible durante una escapada de fin de semana."
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: design
     title: Diseño inteligente
-    description: "Lexus UX es atrevido y está lleno de personalidad: con su distintiva parrilla, silueta deportiva y diseño audaz en la parte trasera, no dejarás de dar vueltas por la ciudad. UX es una nueva generación de crossover diseñada para escapadas urbanas en las que explorar nuevos horizontes. Una exquisita adición a tu moderna aventura."
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    description: "Lexus&nbsp;UX es atrevido y está lleno de personalidad: con su distintiva parrilla, silueta deportiva y diseño audaz en la parte trasera, no dejarás de dar vueltas por la ciudad. UX es una nueva generación de crossover diseñada para escapadas urbanas en las que explorar nuevos horizontes. Una exquisita adición a tu moderna aventura."
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: city
     title: Perfecto para la ciudad
-    description: Lexus UX cuenta con el campo de visión más amplio de su clase, inspirado en el principio arquitectónico japonés de ‘Engawa’, donde el interior y el exterior se conectan a la perfección, facilitando una convivencia más armoniosa con el medio ambiente. Este inteligente diseño te permite detectar el tamaño del vehículo, por lo que será sencillo maniobrar en la ciudad.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    description: Lexus&nbsp;UX cuenta con el campo de visión más amplio de su clase, inspirado en el principio arquitectónico japonés de ‘Engawa’, donde el interior y el exterior se conectan a la perfección, facilitando una convivencia más armoniosa con el medio ambiente. Este inteligente diseño te permite detectar el tamaño del vehículo, por lo que será sencillo maniobrar en la ciudad.
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: technology
     title: Tecnología imaginativa
     description: Disfruta de vistas panorámicas de 360° del coche y de los alrededores a través de cuatro cámaras de vídeo con el Monitor de Vista Panorámica. No hay necesidad de navegar con cables. Y es que su cargador inalámbrico con tecnología Qi incorporada, te permite cargar smartphones de manera sencilla, tan solo colocándolos en el cargador. Esto te garantizará estar al máximo de batería, ¡y listo para explorar en todo momento!
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: saftey
     title: Progreso con seguridad
     description: Un avanzado sistema de seguridad Lexus + de segunda generación te mantiene a ti y a tus pasajeros a salvo, con características que incluyen el Control de Crucero por Radar Dinámico con asistencia de señales de carretera, Sistema de Pre-colisión y Asistencia de Rastreo de Carril. Al complementar y reforzar tus habilidades de conducción, Lexus Safety System + mejora tus sentidos para garantizar que siempre te sientas seguro durante el viaje.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: config
     title: Configurador
-    description: Con una amplia gama disponible, incluyendo el dinámico F&nbsp;SPORT, puedes construir un Lexus UX perfecto para ti. Visita el sitio web para empezar a diseñar hoy mismo tu sueño Lexus UX.
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+    description: Con una amplia gama disponible, incluyendo el dinámico F&nbsp;SPORT, puedes construir un Lexus&nbsp;UX perfecto para ti. Visita el sitio web para empezar a diseñar hoy mismo tu sueño Lexus&nbsp;UX.
+    link: https://carconfig.lexus.no/no/no/?UX/7a7643d4-def8-478f-969f-66aac66ebd86/grades
 ---
