--- a/_pages/cityguides/index.html
+++ b/_pages/cityguides/index.html
@@ -5,6 +5,6 @@ group: true
 nav: true
 nav-order: 2
 
-title: Cityguides
+title: City&shy;guides
 intro: Legg ut på et urbant designeventyr som tar deg fra soloppgang til solnedgang. Oppdag steder som er skapt for designelskere i Bergen og Olso.
 ---
