--- a/_pages/designhoteller/index.html
+++ b/_pages/designhoteller/index.html
@@ -8,7 +8,7 @@ title: Designhoteller
 intro: Vi har lett på kryss og på tvers etter verdens fineste designhoteller. Der hvor konseptdrevne opplevelser møter utrolig arkitektur, interiør og service og du er garantert mer enn hva du forventer av femstjerners luksus. Disse hotellene drives ikke bare av å gi deg et perfekt opphold, men ønsker også å introdusere deg for noe nytt, noe vakkert og noe litt på kanten. Bare se selv…
 
 banner:
-  title: Verdens beste designhoteller
+  title: Verdens beste design&shy;hoteller
 
 features:
 
