--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,8 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: Lexus UX
-intro: Legg ut på ditt neste urbane eventyr med den helt nye Lexus UX, en selvladene hybrid som kombinerer innovativ design med lekkert håndverk. Kjør fra by til by og oppdag en verden av design i en bil skapt for byturer. Opplev stilen og luksusen til Lexus UX med en 24-timers prøvekjøring.
+title: Lexus&nbsp;UX
+intro: Legg ut på ditt neste urbane eventyr med den helt nye Lexus&nbsp;UX, en selvladene hybrid som kombinerer innovativ design med lekkert håndverk. Kjør fra by til by og oppdag en verden av design i en bil skapt for byturer. Opplev stilen og luksusen til Lexus&nbsp;UX med en 24-timers prøvekjøring.
 
 intro-links:
 
@@ -15,11 +15,11 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Bygg din egen UX
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+  - title: Bygg din egen Lexus&nbsp;UX
+    link: https://carconfig.lexus.no/no/no/?UX/7a7643d4-def8-478f-969f-66aac66ebd86/grades
 
   - title: Finn ut mer
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.no/car-models/ux/#hero
 
 feature-cta: Finn ut mer
 
@@ -27,36 +27,36 @@ features:
 
   - id: self-charge
     title: Ingen lading. Ingen diesel. Ingen kompromisser.
-    description: Lexus UX lader seg selv mens du kjører, så du trenger aldri å koble den inn noe sted. Det betyr at du får en helgetur helt uten avbrytelser. Du kjører med den fjerde generasjonens selvladende hybriden til Lexus, med automatgir som har en 2.0-liters, firesylindret bensinmotor, kraftfull el-motor og nyutviklet hybridteknologi.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    description: Lexus&nbsp;UX lader seg selv mens du kjører, så du trenger aldri å koble den inn noe sted. Det betyr at du får en helgetur helt uten avbrytelser. Du kjører med den fjerde generasjonens selvladende hybriden til Lexus, med automatgir som har en 2.0-liters, firesylindret bensinmotor, kraftfull el-motor og nyutviklet hybridteknologi.
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: performance
     title: Kraftig ytelse
-    description: Sett deg til rette med fullstendig oversikt og upåklagelig utsyn i denne moderne crossoveren. Med lavt tyngdepunkt og en stødig kropp byr UX på hårfin kjøredynamikk som du ikke forventer av en SUV. Nye Lexus UX kombinerer E-FOUR All Wheel Drive-ytelse med neste generasjons effektivitet og når inntil 0,41 per mil – perfekt for å spare noen kroner på en helgetur.
-    link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
+    description: Sett deg til rette med fullstendig oversikt og upåklagelig utsyn i denne moderne crossoveren. Med lavt tyngdepunkt og en stødig kropp byr UX på hårfin kjøredynamikk som du ikke forventer av en SUV. Nye Lexus&nbsp;UX kombinerer E-FOUR All Wheel Drive-ytelse med neste generasjons effektivitet og når inntil 0,41 per mil – perfekt for å spare noen kroner på en helgetur.
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: design
     title: Intelligent design
-    description: Lexus UX er dramatisk og full av personlighet. Med sin dramatiske signaturgrill, den sporty silhuetten og bakendens distinkte design, sørger for at folk kommer til å snu seg når du passerer – dette er en helt ny crossover som er bygd for å utforske urbane omgivelser.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    description: Lexus&nbsp;UX er dramatisk og full av personlighet. Med sin dramatiske signaturgrill, den sporty silhuetten og bakendens distinkte design, sørger for at folk kommer til å snu seg når du passerer – dette er en helt ny crossover som er bygd for å utforske urbane omgivelser.
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: city
     title: Perfekt for byen
     description: Designet er basert på det japanske arkitektoniske konseptet 'Engawa', der grensene mellom innendørs og utendørs sømløst føres sammen. I dette luksuriøse og sjåfør-fokuserte miljøet vil den romslige og trygge følelsen gjøre det enkelt å bevege seg rundt i byen.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: technology
     title: Innovativ teknologi
     description: Med Panorama 360° Multikamera kombineres bilder fra fire videokameraer, som gir deg fullstendig oversikt over bilen og omgivelsene i fugleperspektiv. Med trådløs lader i bilen slipper du styr med ledninger og kan enkelt lade smarttelefonen ved å legge den på laderen.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: saftey
     title: Forsett med selvtillit
     description: I det nye Lexus Safety System+, har UX en utrolig omfattende forebyggende sikkerhetspakke, inkludert filassistanse, kollisjonsvernsystem og dynamisk cruisekontroll med skiltlesningassistanse. Lexus Safety System +, gjør at du kan føle deg selvsikker og trygg på reisen din.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    link: https://www.lexus.no/car-models/ux/#hero
 
   - id: config
     title: Konfigurator
-    description: Med en rekke valg mulige, inkludert den dynamiske F&nbsp;SPORT, kan du bygge den Lexus UXen som er perfekt for deg. Besøk hjemmesiden for å bygge din drømmebil i dag.
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+    description: Med en rekke valg mulige, inkludert den dynamiske F&nbsp;SPORT, kan du bygge den Lexus&nbsp;UXen som er perfekt for deg. Besøk hjemmesiden for å bygge din drømmebil i dag.
+    link: https://carconfig.lexus.no/no/no/?UX/7a7643d4-def8-478f-969f-66aac66ebd86/grades
 ---
