--- a/_pages/designhotell/index.html
+++ b/_pages/designhotell/index.html
@@ -8,7 +8,7 @@ title: Designhotell
 intro: Vi har sökt land och rike efter de finaste designhotellen i världen, där en konceptdriven upplevelse möter den finaste arkitekturen, inredningen och servicen. Där du upplever något utöver femstjärnig lyx. Dessa hotell handlar lika mycket om en harmonisk vistelse, som de handlar om att introducera dig till något nytt, något vackert och något vågat. Se själv...
 
 banner:
-  title: Världens bästa designhotell
+  title: Världens bästa design&shy;hotell
 
 features:
 
