--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,8 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: Lexus UX
-intro: Åk iväg på nästa stadsäventyr i nya Lexus UX, en självladdande hybridbil som kombinerar innovativ design med fint hantverk. Kör från stad till stad och upptäck en värld av design i en bil skapad för cityvistelser. Upptäck stilen och lyxen med Lexus UX under ett dygns provkörning.
+title: Lexus&nbsp;UX
+intro: Åk iväg på nästa stadsäventyr i nya Lexus&nbsp;UX, en självladdande hybridbil som kombinerar innovativ design med fint hantverk. Kör från stad till stad och upptäck en värld av design i en bil skapad för cityvistelser. Upptäck stilen och lyxen med Lexus&nbsp;UX under ett dygns provkörning.
 
 intro-links:
 
@@ -15,11 +15,11 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Bygg din egen UX
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+  - title: Bygg din egen Lexus&nbsp;UX
+    link: https://carconfig.lexus.se/se/sv/?UX/473cb99c-1abe-4b59-89a7-c27af62775ae/configure
 
   - title: Läs mer
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.se/car-models/ux/#hero
 
 feature-cta: Läs mer
 
@@ -27,36 +27,36 @@ features:
 
   - id: self-charge
     title: Inga uttag. Ingen diesel. Ingen kompromiss.
-    description: Lexus UX laddar sig själv medan du kör, så du behöver inte koppla in den någonstans, vilket innebär att du slipper uppehåll under din weekend. Du kör med fjärde generationens självladdande hybrid av Lexus, med automatisk växellåda som har en 2.0-liters, fyrcylindrig bensinmotor, kraftfull elmotor och nyutvecklad hybridväxel.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    description: Lexus&nbsp;UX laddar sig själv medan du kör, så du behöver inte koppla in den någonstans, vilket innebär att du slipper uppehåll under din weekend. Du kör med fjärde generationens självladdande hybrid av Lexus, med automatisk växellåda som har en 2.0-liters, fyrcylindrig bensinmotor, kraftfull elmotor och nyutvecklad hybridväxel.
+    link: https://www.lexus.se/car-models/ux/#hero
 
   - id: performance
     title: Kraftfull prestanda
-    description: En sittposition med utmärkt synfält i kombination med en låg tyngdpunkt och fast plattform ger en körupplevelse som du helt enkelt inte skulle förvänta dig av en modern crossover – smidig, kraftfull och lyhörd. Nya Lexus UX kombinerar E-FOUR All-Wheel Drive-prestanda med nästa generations effektivitet, når upp till 0,41 liter per mil, perfekt för att spara på bränsle under en weekendresa.
-    link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
+    description: En sittposition med utmärkt synfält i kombination med en låg tyngdpunkt och fast plattform ger en körupplevelse som du helt enkelt inte skulle förvänta dig av en modern crossover – smidig, kraftfull och lyhörd. Nya Lexus&nbsp;UX kombinerar E-FOUR All-Wheel Drive-prestanda med nästa generations effektivitet, når upp till 0,41 liter per mil, perfekt för att spara på bränsle under en weekendresa.
+    link: https://www.lexus.se/car-models/ux/#hero
 
   - id: design
     title: Intelligent design
-    description: Lexus UX är dramatisk och full av personlighet. Med karaktäristiska galler, sportig silhuett och djärv bakre design drar du blickarna till dig i staden. UX blir en elegant och sofistikerad del av ditt äventyr – en helt ny crossover-serie byggd för moderna och urbana vistelser.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    description: Lexus&nbsp;UX är dramatisk och full av personlighet. Med karaktäristiska galler, sportig silhuett och djärv bakre design drar du blickarna till dig i staden. UX blir en elegant och sofistikerad del av ditt äventyr – en helt ny crossover-serie byggd för moderna och urbana vistelser.
+    link: https://www.lexus.se/car-models/ux/#hero
 
   - id: city
     title: Perfekt för städer
-    description: Lexus UX stoltserar med det vidaste synfältet i sin klass, inspirerat av den japanska arkitektoniska principen "Engawa", där interiören och exteriören är sömlöst ihopkopplade, vilket möjliggör en mer harmonisk samexistens med miljön. Denna snygga design gör att du kan känna av fordonets storlek, vilket gör det lätt att köra i städer.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    description: Lexus&nbsp;UX stoltserar med det vidaste synfältet i sin klass, inspirerat av den japanska arkitektoniska principen "Engawa", där interiören och exteriören är sömlöst ihopkopplade, vilket möjliggör en mer harmonisk samexistens med miljön. Denna snygga design gör att du kan känna av fordonets storlek, vilket gör det lätt att köra i städer.
+    link: https://www.lexus.se/car-models/ux/#hero
 
   - id: technology
     title: Uppfinningsrik teknologi
     description: Njut av 360-graders fågelperspektiv över bilen och din omgivning från fyra videokameror med Panoramic View Monitor. Med en inbyggd Qi-kompatibel trådlös laddare slipper du sladdar, vilket möjliggör enkel laddning av smartphones genom att helt enkelt placera dem på laddaren, så att du kan ägna dig åt att utforska staden.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.se/car-models/ux/#hero
 
   - id: saftey
     title: Kör med självförtroende
     description: Ett avancerat andra generationens Lexus Safety System+ ser till att du och dina passagerare är trygga, med funktioner som Dynamic Radar Cruise Control med vägskyltassistent, förkollisionssystem och Lane Tracing Assist. Genom att komplettera och förstärka din körförmåga förbättrar Lexus Safety System+ dina sinnen för att säkerställa att du alltid känner dig trygg under resan.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    link: https://www.lexus.se/car-models/ux/#hero
 
   - id: config
     title: Konfigurator
-    description: Det finns en rad alternativ tillgängliga, inklusive dynamiska F&nbsp;SPORT, vilket innebär att du kan bygga en Lexus UX som är perfekt för dig. Besök hemsidan och börja konfigurera din drömbil idag.
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+    description: Det finns en rad alternativ tillgängliga, inklusive dynamiska F&nbsp;SPORT, vilket innebär att du kan bygga en Lexus&nbsp;UX som är perfekt för dig. Besök hemsidan och börja konfigurera din drömbil idag.
+    link: https://carconfig.lexus.se/se/sv/?UX/473cb99c-1abe-4b59-89a7-c27af62775ae/configure
 ---
