remove 24hr test drive

--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -6,7 +6,7 @@ nav-title: Lexus UX
 nav-order: 6
 
 title: Den neuen Lexus&nbsp;UX erleben
-intro: Entdecken Sie den Lexus&nbsp;UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Design begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt 24 Stunden lang probefahren und den Stil des Luxus von heute mit einem Lexus&nbsp;UX entdecken.
+intro: Entdecken Sie den Lexus&nbsp;UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Design begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt probefahren und den Stil des Luxus von heute mit einem Lexus&nbsp;UX entdecken.
 
 intro-links:
 
