remove 24hr test drive

--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -6,7 +6,7 @@ nav-title: Lexus UX
 nav-order: 6
 
 title: Lexus UX
-intro: La tua prossima avventura urbana è al volante del nuovissimo Lexus UX, l'ibrido elettronico di quarta generazione che si fa notare per il suo design accattivante e un corpo vettura sofisticato. Scopri gli angoli più cool della città, passando dai grattacieli futuristici alle gallerie d'arte contemporanea, alla guida di un crossover dal carattere deciso. Prova i comfort di lusso e lo stile esclusivo di Lexus UX con un test drive di 24 ore.
+intro: La tua prossima avventura urbana è al volante del nuovissimo Lexus UX, l'ibrido elettronico di quarta generazione che si fa notare per il suo design accattivante e un corpo vettura sofisticato. Scopri gli angoli più cool della città, passando dai grattacieli futuristici alle gallerie d'arte contemporanea, alla guida di un crossover dal carattere deciso. Prova i comfort di lusso e lo stile esclusivo di Lexus UX con un test drive.
 
 intro-links:
 
