--- a/_pages/guide-delle-citta/index.html
+++ b/_pages/guide-delle-citta/index.html
@@ -6,5 +6,5 @@ nav: true
 nav-order: 2
 
 title: Guide delle città
-intro: "Vivi un'incredibile avventura urbana percorrendo le strade del design dall'alba al tramonto. Scopri gli iconici grattacieli di Milano o le grandi opere architettoniche nel cuore di Roma: ecco le nostre guide speciali per gli amanti del design."
+intro: "Vivi un'incredibile avventura urbana percorrendo le strade del design. Scopri gli iconici grattacieli di Milano o le grandi opere architettoniche nel cuore di Roma: ecco le nostre guide speciali per gli amanti del design."
 ---
