--- a/_pages/inspiration/index.html
+++ b/_pages/inspiration/index.html
@@ -4,7 +4,7 @@ id: design-hotels
 nav: true
 nav-order: 3
 
-title: Designhotell
+title: Inspiration
 intro: Vi har sökt land och rike efter de finaste designhotellen i världen, där en konceptdriven upplevelse möter den finaste arkitekturen, inredningen och servicen. Där du upplever något utöver femstjärnig lyx. Dessa hotell handlar lika mycket om en harmonisk vistelse, som de handlar om att introducera dig till något nytt, något vackert och något vågat. Se själv...
 
 banner:
