--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -6,7 +6,7 @@ nav-title: Lexus UX
 nav-order: 6
 
 title: Lexus&nbsp;UX
-intro: Åk iväg på nästa stadsäventyr i nya Lexus&nbsp;UX, en självladdande hybridbil som kombinerar innovativ design med fint hantverk. Kör från stad till stad och upptäck en värld av design i en bil skapad för cityvistelser. Upptäck stilen och lyxen med Lexus&nbsp;UX under ett dygns provkörning.
+intro: Åk iväg på nästa stadsäventyr i nya Lexus&nbsp;UX, en självladdande elhybrid som kombinerar innovativ design med fint hantverk. Kör från stad till stad och upptäck en värld av design i en bil skapad för cityvistelser.
 
 intro-links:
 
