--- a/_pages/svenska-designhotell/index.html
+++ b/_pages/svenska-designhotell/index.html
@@ -4,6 +4,6 @@ id: hotels
 nav: true
 nav-order: 5
 
-title: Kampanjer
+title: Svenska designhotell
 intro: Sök bland våra designhotell i Sverige och resten av världen och åk på en stilsäker getaway.
 ---
