--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -6,7 +6,7 @@ nav-title: Lexus UX
 nav-order: 6
 
 title: Lexus&nbsp;UX
-intro: Dirígete a tu próxima aventura urbana con el nuevo Lexus&nbsp;UX, un Híbrido Autorrecargable que incorpora un diseño innovador y una exquisita artesanía. Salta de ciudad en ciudad, descubriendo un mundo de diseño y artesanía en un vehículo hecho para escapadas urbanas. Descubre el estilo y el lujo del Lexus&nbsp;UX con una prueba de conducción de 24 horas.
+intro: Dirígete a tu próxima aventura urbana con el nuevo Lexus&nbsp;UX, un Híbrido Autorrecargable que incorpora un diseño innovador y un exquisito acabado artesanal. Salta de ciudad en ciudad, descubriendo un mundo de diseño y artesanía en un vehículo hecho para escapadas urbanas. Déjate seducir por el estilo y lujo del Lexus&nbsp;UX.
 
 intro-links:
 
