--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -16,11 +16,11 @@ intro-links:
     main-cta: true
 
   - title: Diseña tu propio Lexus&nbsp;UX
-    link: https://carconfig.lexus.no/no/no/?UX/7a7643d4-def8-478f-969f-66aac66ebd86/grades
+    link: https://carconfig.lexusauto.es/es/es/?UX/5c9902c7-85ae-4dae-8c0f-0c863921cb11/grades&models
     open-in-tab: true
 
   - title: Descubre más
-    link: https://www.lexus.no/car-models/ux/#hero
+    link: https://www.lexusauto.es/car-models/ux/#hero
 
 feature-cta: Descubre más
 
@@ -29,36 +29,36 @@ features:
   - id: self-charge
     title: Sin enchufes. Sin diésel. Sin preocupaciones
     description: El modelo Lexus&nbsp;UX se carga de forma automática mientras conduces. No tiene enchufes, lo cual significa que tu escapada no tendrá interrupciones. Los viajes estarán impulsados por una cuarta generación de Híbrido Autorrecargable Lexus con transmisión automática que cuenta con un motor de gasolina de 4 cilindros y 2 litros, un potente motor eléctrico y una transmisión híbrida de nuevo desarrollo.
-    link: https://www.lexus.no/car-models/ux/#hero
+    link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: performance
     title: Rendimiento estimulante
     description: "Una posición de asiento dominante con excelente visibilidad, junto con un centro de gravedad bajo y una plataforma rígida, brindan una experiencia de conducción que simplemente no se esperaría de un crossover moderno: ágil, potente y sensible. El nuevo Lexus&nbsp;UX yuxtapone el rendimiento de la tracción en las cuatro ruedas E-FOUR con una eficiencia de próxima generación, logrando hasta 68.9 mpg, ideal para ahorrar combustible durante una escapada de fin de semana."
-    link: https://www.lexus.no/car-models/ux/#hero
+    link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: design
     title: Diseño inteligente
     description: "Lexus&nbsp;UX es atrevido y está lleno de personalidad: con su distintiva parrilla, silueta deportiva y diseño audaz en la parte trasera, no dejarás de dar vueltas por la ciudad. UX es una nueva generación de crossover diseñada para escapadas urbanas en las que explorar nuevos horizontes. Una exquisita adición a tu moderna aventura."
-    link: https://www.lexus.no/car-models/ux/#hero
+    link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: city
     title: Perfecto para la ciudad
     description: Lexus&nbsp;UX cuenta con el campo de visión más amplio de su clase, inspirado en el principio arquitectónico japonés de ‘Engawa’, donde el interior y el exterior se conectan a la perfección, facilitando una convivencia más armoniosa con el medio ambiente. Este inteligente diseño te permite detectar el tamaño del vehículo, por lo que será sencillo maniobrar en la ciudad.
-    link: https://www.lexus.no/car-models/ux/#hero
+    link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: technology
     title: Tecnología imaginativa
     description: Disfruta de vistas panorámicas de 360° del coche y de los alrededores a través de cuatro cámaras de vídeo con el Monitor de Vista Panorámica. No hay necesidad de navegar con cables. Y es que su cargador inalámbrico con tecnología Qi incorporada, te permite cargar smartphones de manera sencilla, tan solo colocándolos en el cargador. Esto te garantizará estar al máximo de batería, ¡y listo para explorar en todo momento!
-    link: https://www.lexus.no/car-models/ux/#hero
+    link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: saftey
     title: Progreso con seguridad
     description: Un avanzado sistema de seguridad Lexus + de segunda generación te mantiene a ti y a tus pasajeros a salvo, con características que incluyen el Control de Crucero por Radar Dinámico con asistencia de señales de carretera, Sistema de Pre-colisión y Asistencia de Rastreo de Carril. Al complementar y reforzar tus habilidades de conducción, Lexus Safety System + mejora tus sentidos para garantizar que siempre te sientas seguro durante el viaje.
-    link: https://www.lexus.no/car-models/ux/#hero
+    link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: config
     title: Configurador
     description: Con una amplia gama disponible, incluyendo el dinámico F&nbsp;SPORT, puedes construir un Lexus&nbsp;UX perfecto para ti. Visita el sitio web para empezar a diseñar hoy mismo tu sueño Lexus&nbsp;UX.
-    link: https://carconfig.lexus.no/no/no/?UX/7a7643d4-def8-478f-969f-66aac66ebd86/grades
+    link: https://carconfig.lexusauto.es/es/es/?UX/5c9902c7-85ae-4dae-8c0f-0c863921cb11/grades&models
     open-in-tab: true
 ---
