--- a/_pages/city-guides/berlin/index.html
+++ b/_pages/city-guides/berlin/index.html
@@ -64,7 +64,7 @@ features:
 
   - id: soundlandschaften-zum-schweben
     time: "00:00"
-    place: Soundlandschaften zum Schweben
+    place: Soundland&shy;schaften zum Schweben
     title: Rein ins Abenteuer
     description: >
       Um den Berliner Techno voll auszukosten und in die Szene einzutauchen, empfehlen wir zu später Stunde das House of Weekend in einem ex-DDR-Prachtbau. Hier können Sie mit Roof Garden und minimalistischem Design in bizarr schöne Soundlandschaften eindringen. Oder Sie halten Ausschau nach internationalen DJ’s im Kater Blau oder Prince Charles in Kreuzberg und natürlich im weltberühmten Berghain. Die Berliner Musikwelt ist legendär und Liebhaber sämtlicher Stile kommen hier auf ihre Kosten: In Charlottenburg wartet mit dem A-Trane Berlins Jazzclub Nr. 1, im Tempodrom – dem Zirkuszelt aus Stahlbeton – treten internationale Stars sämtlicher Couleur auf und im Sommer können sich Sie in zahlreichen Beach- und Boatbars davon überzeugen, wie sehr Berlin auch Stadt am Wasser ist. Das einzigartige Nachtleben, die atemberaubenden Kontraste dieser aufregenden Stadt und ihre Geschichte werden Ihnen sicher lange in guter Erinnerung bleiben, aber Vorsicht: Suchtgefahr, eventuell wollen Sie hier gar nicht mehr weg.
